# ECBM

./: LICENSE  README.md
ECBMCode/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ECBMCode/app_core/: __init__.py
ECBMCode/app_core/controllers/: __init__.py  base_controller.py
ECBMCode/app_core/services/: __init__.py  base_service.py
ECBMCode/app_core/threads/: __init__.py  base_worker.py
ECBMCode/app_data/: __init__.py
ECBMCode/app_data/database/: __init__.py  connection_manager.py
ECBMCode/app_data/models/: __init__.py  base_model.py
ECBMCode/app_data/repositories/: __init__.py  base_repository.py
ECBMCode/app_infra/: __init__.py
ECBMCode/app_infra/config/: __init__.py  config_manager.py
ECBMCode/app_infra/exceptions/: __init__.py  base_exceptions.py
ECBMCode/app_infra/logging/: __init__.py  log_manager.py
ECBMCode/app_infra/utils/: __init__.py  path_utils.py  size_utils.py
ECBMCode/app_plugins/: __init__.py  base_plugin.py
ECBMCode/app_ui/: __init__.py  animation_utils.py  main_window.py  signals.py  size_manager.py  theme_manager.py
ECBMCode/app_ui/dialogs/: __init__.py
ECBMCode/app_ui/styles/: __init__.py  base.qss  dark_theme.qss  light_theme.qss
ECBMCode/app_ui/widgets/: __init__.py  center_panel.py  left_panel.py  loading_indicator.py  right_panel.py  splitter_panels.py  vertical_tool_bar.py
ECBMCode/tests/: __init__.py  conftest.py
ECBMCode/tests/test_app_core/: __init__.py
ECBMCode/tests/test_app_data/: __init__.py
ECBMCode/tests/test_app_infra/: __init__.py
ECBMCode/tests/test_app_ui/: __init__.py  (+4 more)
(+35 files in other folders)
